# 03jdfh-391

./: README.md  pyproject.toml
dialogue_checker/: __init__.py  checker.py  cli.py  models.py  parser.py  preview.py
dialogue_checker/checkers/: __init__.py  base.py  condition_checker.py  dead_end_checker.py  pace_checker.py
dialogues/: example_scene.json  problematic_scene.json  writer_export_example.json
tests/: test_cli_smoke.py  test_condition_checker.py  test_dead_end_checker.py  test_pace_checker.py  test_path_explorer.py
